Created two routes (universes, characters) - Started basic ui

--- a/etc/defaults.cfg
+++ b/etc/defaults.cfg
@@ -1,3 +1,12 @@
+[app]
+name = MetaChar
+author = Ivan ROGER
+contact = ivan.bob.emile@gmail.com
+
+[data]
+ressource_folder = data
+index_file = index.json
+
 [config]
 debug = True
 ip_address = 0.0.0.0
