Character details + Markdown in descriptions.

--- a/etc/defaults.cfg
+++ b/etc/defaults.cfg
@@ -5,7 +5,10 @@ contact = ivan.bob.emile@gmail.com
 
 [data]
 ressource_folder = data
-index_file = index.json
+
+[graphic]
+default_universe_pic = img/default_universe_pic.jpg
+default_character_pic = img/default_universe_pic.jpg
 
 [config]
 debug = True
