Pagination system (fix #6)

--- a/etc/defaults.cfg
+++ b/etc/defaults.cfg
@@ -9,6 +9,7 @@ ressource_folder = data
 [graphic]
 default_universe_pic = img/default_universe_pic.jpg
 default_character_pic = img/default_universe_pic.jpg
+items_per_page = 5
 
 [config]
 debug = True
