URL Structure rewrite.

--- a/src/etc/defaults.cfg
+++ b/src/etc/defaults.cfg
@@ -11,6 +11,10 @@ default_universe_pic = img/default_universe_pic.jpg
 default_character_pic = img/default_universe_pic.jpg
 items_per_page = 5
 
+[code]
+repo_url = https://github.com/Ivan-Roger/NAP09103_CW1
+repo_name = @Ivan-Roger - NAP09103_CW1
+
 [config]
 debug = True
 ip_address = 0.0.0.0
